--- a/src/main/resources/templates/Register.html
+++ b/src/main/resources/templates/Register.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Register here</h1>
-<form action="/register" method="psot">
+<form action="/register" method="post">
     <label for="username">Username:</label>
     <input id="username" name="username" type="text" required />
     <br /><br/>
@@ -23,7 +23,7 @@
     </select>
     <br /><br/>
 
-    <button type="Register">Register</button>
+    <button type="Submit">submit</button>
 
 </form>
 </body>
