--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<!-- HTML document declaration and language setting -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Registration success</title>
 </head>
 <body>
+<!-- Message in heading in case of successful registration -->
 <h1>You have been Successfully Registered now.</h1>
+<!-- Thymeleaf URL expression for the login endpoint -->
 <p>Click <a th:href="@{/user}">here</a> to log in.</p>
 
 </body>
